--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "jade": "~1.5.0",
     "moment": "^2.8.3",
     "nconf": "~0.6.9",
-    "socket.io": "^1.1.0",
-    "level": "~0.18.0"
+    "socket.io-client": "^1.1.0",
+    "level": "~0.18.0",
+    "twitter-text": "~1.9.4"
   },
   "repository": {
     "type": "git",
