--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "moment": "^2.8.3",
     "nconf": "~0.6.9",
     "socket.io-client": "^1.1.0",
-    "level-dual-message": "~2.1.0"
+    "meatspace-publico": "~1.0.1"
   },
   "repository": {
     "type": "git",
