--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rwrrd-client",
+  "name": "rvlvvr-client",
   "version": "1.0.0",
   "description": "federated messaging experiment - client",
   "private": true,
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/rwrrd/rwrrd-client.git"
+    "url": "git://github.com/rvlvvr/rvlvvr-client.git"
   },
   "author": "Edna Piranha <jen@ednapiranha.com> (http://ednapiranha.com)",
   "license": "BSD"
