added gulp, browersify and fixed duplicates

--- a/package.json
+++ b/package.json
@@ -1,22 +1,41 @@
 {
   "name": "rvlvvr-client",
   "version": "1.0.0",
-  "description": "federated messaging experiment - client",
+  "description": "distributed messaging experiment - client",
   "private": true,
   "engines": {
     "node": "~0.10.x",
     "npm": "1.3.x"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "gulp & nodemon index.js"
   },
   "dependencies": {
+    "browserify": "^5.9.3",
     "hapi": "~6.4.0",
     "jade": "~1.5.0",
     "moment": "^2.8.3",
     "nconf": "~0.6.9",
     "socket.io-client": "^1.1.0",
-    "meatspace-publico": "~1.0.1"
+    "meatspace-publico": "~1.0.1",
+    "webremix": "~1.0.0",
+    "jquery": "~2.1.1",
+    "moment": "~2.8.3"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.7",
+    "gulp-autowatch": "0.0.1",
+    "gulp-cached": "^1.0.1",
+    "gulp-csso": "^0.2.9",
+    "gulp-if": "^1.2.4",
+    "gulp-match": "^0.2.0",
+    "gulp-sourcemaps": "^1.1.1",
+    "gulp-uglify": "^0.3.1",
+    "mkdirp": "^0.5.0",
+    "nodemon": "~1.2.1",
+    "rimraf": "^2.2.8",
+    "vinyl-buffer": "0.0.0",
+    "vinyl-source-stream": "^0.1.1"
   },
   "repository": {
     "type": "git",
