--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "jade": "~1.5.0",
     "moment": "^2.8.3",
     "nconf": "~0.6.9",
+    "socket.io": "^1.1.0",
     "socket.io-client": "^1.1.0",
     "webremix": "~1.0.0",
     "jquery": "~2.1.1",
+    "meatspace-publico": "~1.0.1",
     "moment": "~2.8.3"
   },
   "devDependencies": {
