--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "1.4.x"
   },
   "scripts": {
-    "start": "gulp & nodemon index.js"
+    "start": "keybase pull & gulp & nodemon index.js"
   },
   "dependencies": {
     "browserify": "^5.9.3",
