--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "webremix": "~1.0.0",
     "jquery": "~2.1.1",
     "meatspace-publico": "~2.0.1",
-    "moment": "~2.8.3"
+    "moment": "~2.8.3",
+    "nodemon": "~1.2.1"
   },
   "devDependencies": {
     "gulp": "^3.8.7",
@@ -33,7 +34,6 @@
     "gulp-sourcemaps": "^1.1.1",
     "gulp-uglify": "^0.3.1",
     "mkdirp": "^0.5.0",
-    "nodemon": "~1.2.1",
     "rimraf": "^2.2.8",
     "vinyl-buffer": "0.0.0",
     "vinyl-source-stream": "^0.1.1"
